  front-end login page. Added the ability for custom themes to deploy their own
  custom favicon.

- [2021.04.29; Bug-fix; Maikuolan]: Missing index warning and wrong error stage
  being reported for non-blocked CAPTCHAs; Fixed.

- [2021.05.01; Bug-fix; Maikuolan]: Log truncation not being calculated
  properly; Fixed.

- [2021.05.07; Maikuolan]: Very slightly reworked/improved the front-end CSS.

=== Version/Release 2.5.1 ===
PATCH RELEASE.

- [2021.03.11; Maikuolan]: Added some missing return type declarations.

- [2021.03.12; Maikuolan]: Added a third configuration directive (other
  verification) to work alongside those for search engine and social media
  verification (since this merely extends existing functionality, rather than
  adding new functionality, I'm not marking this as a new feature).

- [2021.03.18; Maikuolan]: Added closure for adding new profile entries, to
  make adding profile entries via modules a little cleaner and easier. Added
  closure to determine, based on current signature count and on whether any
  CAPTCHA solutions are enabled, whether to honour API lookups (ensures
  compatibility with modules written with future v3 code in mind).

- [2021.03.31; Maikuolan]: Adjusted the IP test page as to allow testing user
  agents without the need to also specify an IP address. Added links to the
  entries displayed on the IP tracking page to immediately search for those
  particular entries in the logs.

- [2021.04.06; Bug-fix; Maikuolan]: Unnecessary count check enforced on
  interdependent replacements; Removed.

- [2021.04.07-09; Maikuolan]: Added proper component dependency support to the
  front-end updates page and revamped related code and update mechanisms.

- [2021.04.10; Maikuolan]: Search engine verification update.

- [2021.04.11; Maikuolan]: Updates handler activation closure will now activate
  its own dependencies, too.

Caleb M (Maikuolan),
April 11, 2021.

=== Version/Release 2.5.0 ===
MINOR RELEASE.
