@@ -1,7 +1,7 @@
 ---
 CIDRAM Core:
  Name: CIDRAM Core
- Version: 2.6.0-DEV+21120596
+ Version: 2.6.0-DEV+21126472
  Minimum Required: 2.0.0
  Dependencies:
   PHP: >=7.2
@@ -59,7 +59,7 @@ CIDRAM Core:
    - 0b078460e75a5a6a171a879c8c533b57e87e8fe8b851cf1beeab3c62a9e2e26b:14878
    - 1335bb0c07953d9fabb061ca00f06a14759a431109beda8a4d0fa32ba1acf62a:2922
    - ede5dc6b2326f45f2bd33521c4fc2d1013e0122b5e3f4b6341b6b78651b5903f:8096
-   - 23dc1e2aec97a796bdc5a062fdc4917567059d7d977388581433a0695e207a8f:20786
+   - ff620e9f3a264e033dd02a14d2e82d5eacc8117366fece395be40f0f9e3d336e:20794
    - 68f397245c0c4a9138ebacdb1207b55e6c1bbbf2f924be61ee94b991d885fab0:7848
    - 99704550500f662ce435aae6e354edaf2cc150c84702e17b60ff8d3f238fb4ac:95912
    - 4d89fe0f2b14c84b8fdad2579333d4d0f31366815d4cb60e040fbbf2c68aaa1d:5158
@@ -222,7 +222,7 @@ CIDRAM Front-End:
    - 5635e13d7cecabf5e397c79932474442c11f116fabbd5b012248f957056a3158:776
    - 8627543d60036a14e2d1033e63cd703d64b83ebc539d05b40b2aeedbb5d2f2a7:765
    - ebfbd6a90a244ad3f638cbe044dd661fa435ff4094fb63312346f786336b2960:996
-   - 1469e64532da79b78b9a0628180dab20daf1d72f228e57a813c27117823b75a4:237401
+   - cbbcde1457b576df4910940e4a791e7cff9f52f9e618f99a24f2ef56df6fd8f3:237687
    - 126d5e2c5ae8b01a7bdc7a167077af1edd77987a1f6ed54af725e7e1ba5dfac2:199108
  Reannotate: components.dat
 Common Classes Package:
